# quadrupbot_env

./: PPO.py  PPO_bias.py  PPO_cnn.py  SAC.py  color_map.dxt1  direction.py  eval.py  eval_SAC.py  eval_cnn.py  gym_env_wrapper.py  gym_env_wrapper_v3  gym_env_wrapper_v3.py  imit.py  manual_controller.py  manual_trajectory.py  motor.py  quad_cnn_env.py  quad_cnn_env_no_contact.py  quad_environment.py  quad_multi_direct_v2.py  quad_multi_direct_v3.py  quad_multi_direct_v3_gym.py  quad_multi_real_bot_dummy.py  quad_multi_real_bot_gym.py  quad_multi_refine_real_bot.py  quad_multidirect_env.py  quadrup.urdf  quadrup_v0.urdf  quadrupv1.urdf  realtime_plotting.py  response.py  results_PPO.ipynb  reward_compare.py  reward_compare_dummy_env.py  reward_success_ratio.py  stable_training.py  target.urdf  target_face.urdf  terrain.py  terrain.xlsx  (+11 more)
MATLAB/: quadrupt_control.m
NCKH_AN_and_NHAN/: CMakeLists.txt  package.xml
NCKH_AN_and_NHAN/launch/: display.launch  (+1 more)
alg_test/: alg_test_PPO.py  eval_test_PPO.py  test_PPO.py  test_SAC.py  test_env.py
quadrup/: CMakeLists.txt  package.xml
quadrup/config/: joint_names_Model_Doan_HK231_ASM_Dog_URDF.yaml
quadrup/launch/: display.launch  gazebo.launch
quadrup/meshes/: base_link.STL  leg_left_back.STL  leg_left_back1.1.STL  leg_left_back1.2.STL  leg_left_front.STL  leg_left_front1.1.STL  leg_left_front1.2.STL  leg_right_back.STL  leg_right_back1.1.STL  leg_right_back1.2.STL  leg_right_front.STL  leg_right_front1.1.STL  leg_right_front1.2.STL
quadrup/urdf/: Model_Doan_HK231_ASM_Dog_URDF.csv  Model_Doan_HK231_ASM_Dog_URDF.urdf
(+544 files in other folders)
